[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Enviroment/Keys/Yellow/YellowKey.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Enviroment/Doors/Yellow/YellowDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/PlayerKeys.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Levels/Level.gd" type="Script" id=7]
[ext_resource path="res://Player/Powers/DoubleJump/DoubleJumpPu.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/PlayerPowers.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Text/finalexplanation.png" type="Texture" id=10]
[ext_resource path="res://UI/Text/leftright.png" type="Texture" id=11]
[ext_resource path="res://UI/Text/doorexplanation.png" type="Texture" id=12]
[ext_resource path="res://UI/Text/puexplanation.png" type="Texture" id=13]
[ext_resource path="res://LaserSight/LaserSight.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemies/Enemie.tscn" type="PackedScene" id=15]

[node name="Level1" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 1197.0
margin_bottom = 266.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 1, 32, 0, 1, 33, 0, 1, 34, 0, 1, 35, 0, 1, 36, 0, 1, 37, 0, 1, 38, 0, 1, 39, 0, 1, 40, 0, 1, 41, 0, 1, 42, 0, 1, 43, 0, 1, 44, 0, 1, 45, 0, 1, 46, 0, 1, 47, 0, 1, 48, 0, 1, 49, 0, 1, 50, 0, 1, 51, 0, 1, 52, 0, 1, 53, 0, 1, 54, 0, 1, 55, 0, 1, 56, 0, 1, 57, 0, 1, 58, 0, 1, 59, 0, 1, 60, 0, 1, 61, 0, 1, 62, 0, 1, 63, 0, 1, 64, 0, 1, 65, 0, 1, 66, 0, 1, 67, 0, 1, 68, 0, 1, 69, 0, 1, 70, 0, 1, 71, 0, 2, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 131073, 65558, 0, 131073, 65559, 0, 131073, 65560, 0, 131073, 65561, 0, 131073, 65562, 0, 131073, 65563, 0, 131073, 65564, 0, 131073, 65565, 0, 131073, 65566, 0, 131073, 65567, 0, 131073, 65568, 0, 131073, 65569, 0, 131073, 65570, 0, 131073, 65571, 0, 131073, 65572, 0, 131073, 65573, 0, 131073, 65574, 0, 131073, 65575, 0, 131073, 65576, 0, 131073, 65577, 0, 131073, 65578, 0, 131073, 65579, 0, 131073, 65580, 0, 131073, 65581, 0, 131073, 65582, 0, 131073, 65583, 0, 131073, 65584, 0, 131073, 65585, 0, 131073, 65586, 0, 131073, 65587, 0, 131073, 65588, 0, 131073, 65589, 0, 131073, 65590, 0, 131073, 65591, 0, 131073, 65592, 0, 131073, 65593, 0, 131073, 65594, 0, 131073, 65595, 0, 131073, 65596, 0, 131073, 65597, 0, 131073, 65598, 0, 131073, 65599, 0, 131073, 65600, 0, 131073, 65601, 0, 131073, 65602, 0, 131073, 65603, 0, 131073, 65604, 0, 131073, 65605, 0, 131073, 65606, 0, 65537, 65607, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131142, 0, 65536, 131143, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196678, 0, 65536, 196679, 0, 65538, 327679, 0, 65536, 262144, 0, 65538, 262214, 0, 65536, 262215, 0, 65538, 393215, 0, 65536, 327680, 0, 65538, 327696, 0, 0, 327697, 0, 2, 327750, 0, 65536, 327751, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393232, 0, 131072, 393233, 0, 131074, 393286, 0, 65536, 393287, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458805, 1, 0, 458822, 0, 65536, 458823, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524341, 1, 0, 524358, 0, 65536, 524359, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589877, 1, 0, 589894, 0, 65536, 589895, 0, 65538, 720895, 0, 65536, 655360, 0, 65537, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 1, 655384, 0, 1, 655385, 0, 1, 655386, 0, 1, 655387, 0, 1, 655388, 0, 1, 655389, 0, 1, 655390, 0, 1, 655391, 0, 1, 655392, 0, 1, 655393, 0, 1, 655394, 0, 1, 655395, 0, 1, 655396, 0, 1, 655397, 0, 1, 655398, 0, 1, 655399, 0, 1, 655400, 0, 1, 655401, 0, 1, 655402, 0, 1, 655403, 0, 1, 655404, 0, 1, 655405, 0, 1, 655406, 0, 1, 655407, 0, 1, 655408, 0, 1, 655409, 0, 1, 655410, 0, 1, 655411, 0, 1, 655412, 0, 1, 655413, 0, 1, 655414, 0, 1, 655415, 0, 1, 655416, 0, 1, 655417, 0, 1, 655418, 0, 1, 655419, 0, 1, 655420, 0, 1, 655421, 0, 1, 655422, 0, 1, 655423, 0, 1, 655424, 0, 1, 655425, 0, 1, 655426, 0, 1, 655427, 0, 1, 655428, 0, 1, 655429, 0, 1, 655430, 0, 65537, 655431, 0, 65538, 786431, 0, 131072, 720896, 0, 131073, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 131073, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 131073, 720917, 0, 131073, 720918, 0, 131073, 720919, 0, 131073, 720920, 0, 131073, 720921, 0, 131073, 720922, 0, 131073, 720923, 0, 131073, 720924, 0, 131073, 720925, 0, 131073, 720926, 0, 131073, 720927, 0, 131073, 720928, 0, 131073, 720929, 0, 131073, 720930, 0, 131073, 720931, 0, 131073, 720932, 0, 131073, 720933, 0, 131073, 720934, 0, 131073, 720935, 0, 131073, 720936, 0, 131073, 720937, 0, 131073, 720938, 0, 131073, 720939, 0, 131073, 720940, 0, 131073, 720941, 0, 131073, 720942, 0, 131073, 720943, 0, 131073, 720944, 0, 131073, 720945, 0, 131073, 720946, 0, 131073, 720947, 0, 131073, 720948, 0, 131073, 720949, 0, 131073, 720950, 0, 131073, 720951, 0, 131073, 720952, 0, 131073, 720953, 0, 131073, 720954, 0, 131073, 720955, 0, 131073, 720956, 0, 131073, 720957, 0, 131073, 720958, 0, 131073, 720959, 0, 131073, 720960, 0, 131073, 720961, 0, 131073, 720962, 0, 131073, 720963, 0, 131073, 720964, 0, 131073, 720965, 0, 131073, 720966, 0, 131073, 720967, 0, 131074 )

[node name="Tutorial" type="Sprite" parent="."]
position = Vector2( 117.869, 85.9998 )
texture = ExtResource( 11 )

[node name="Tutorial2" type="Sprite" parent="."]
position = Vector2( 1036.61, 116.438 )
scale = Vector2( 1.0221, 1 )
texture = ExtResource( 12 )

[node name="Tutorial3" type="Sprite" parent="."]
position = Vector2( 412.005, 72.4838 )
scale = Vector2( 1.0221, 1 )
texture = ExtResource( 13 )

[node name="Tutorial4" type="Sprite" parent="."]
position = Vector2( 662.171, 79.211 )
scale = Vector2( 1.0221, 1 )
texture = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerKeys" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="PlayerPowers" parent="CanvasLayer" instance=ExtResource( 9 )]
margin_top = -0.33371
margin_bottom = -0.33371

[node name="WorldEnvironment" parent="." instance=ExtResource( 3 )]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 26.8701, 148.492 )

[node name="Keys" type="YSort" parent="YSort"]

[node name="YellowKey" parent="YSort/Keys" instance=ExtResource( 4 )]
position = Vector2( 272.279, 68.0565 )

[node name="Doors" type="YSort" parent="YSort"]
position = Vector2( -0.16684, -0.0834198 )

[node name="YellowDoor" parent="YSort/Doors" instance=ExtResource( 5 )]
position = Vector2( 1067.39, 153.276 )
level = 2

[node name="SpawnPoint" parent="YSort/Doors/YellowDoor" index="4"]
position = Vector2( -22.0576, 0.472473 )

[node name="Powers" type="YSort" parent="YSort"]

[node name="DoubleJumpPowerUp" parent="YSort/Powers" instance=ExtResource( 8 )]
position = Vector2( 406.441, 132.216 )

[node name="LaserSight" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 786.613, 40.9085 )
stop_working_time = 2.0
work_time = 1.0

[node name="Enemie" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 877.52, 145.664 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 1152.39, 192.669 )
[connection signal="player_passed" from="YSort/Doors/YellowDoor" to="." method="_on_YellowDoor_player_passed"]
[connection signal="is_player" from="YSort/LaserSight" to="." method="_on_LaserSight_is_player"]
[connection signal="is_player" from="YSort/Enemie" to="." method="_on_Enemie_is_player"]

[editable path="YSort/Doors/YellowDoor"]
