[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://World/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://World/WorldEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/PlayerPowers.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/PlayerKeys.tscn" type="PackedScene" id=7]
[ext_resource path="res://LaserSight/LaserSight.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Enviroment/Doors/Yellow/YellowDoor.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Enviroment/Doors/Blue/BlueDoor.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Enviroment/Keys/Blue/BlueKey.tscn" type="PackedScene" id=11]

[node name="Level4" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -3.0
margin_right = 717.0
margin_bottom = 381.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1, 24, 0, 1, 25, 0, 1, 26, 0, 1, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 1, 31, 0, 2, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 131073, 65558, 0, 131073, 65559, 0, 131073, 65560, 0, 131073, 65561, 0, 131073, 65562, 0, 131073, 65563, 0, 131073, 65564, 0, 131073, 65565, 0, 131073, 65566, 0, 65537, 65567, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131102, 0, 65536, 131103, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196638, 0, 65536, 196639, 0, 65538, 327679, 0, 65536, 262144, 0, 65538, 262174, 0, 65536, 262175, 0, 65538, 393215, 0, 65536, 327680, 0, 65537, 327681, 0, 1, 327682, 0, 1, 327683, 0, 2, 327701, 0, 0, 327702, 0, 1, 327703, 0, 2, 327710, 0, 65536, 327711, 0, 65538, 458751, 0, 65536, 393216, 0, 65537, 393217, 0, 131073, 393218, 0, 131073, 393219, 0, 131074, 393224, 1, 0, 393228, 1, 0, 393232, 1, 0, 393237, 0, 131072, 393238, 0, 65537, 393239, 0, 65538, 393246, 0, 65536, 393247, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458774, 0, 65536, 458775, 0, 65538, 458782, 0, 65536, 458783, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524310, 0, 65536, 524311, 0, 65538, 524314, 1, 0, 524315, 1, 0, 524318, 0, 65536, 524319, 0, 65538, 655359, 0, 65536, 589824, 0, 65537, 589825, 0, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 1, 589829, 0, 1, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 1, 589840, 0, 1, 589841, 0, 1, 589842, 0, 1, 589843, 0, 1, 589844, 0, 1, 589845, 0, 1, 589846, 0, 65537, 589847, 0, 65538, 589854, 0, 65536, 589855, 0, 65538, 720895, 0, 131072, 655360, 0, 131073, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 131073, 655372, 0, 131073, 655373, 0, 131073, 655374, 0, 131073, 655375, 0, 131073, 655376, 0, 131073, 655377, 0, 131073, 655378, 0, 131073, 655379, 0, 131073, 655380, 0, 131073, 655381, 0, 131073, 655382, 0, 65537, 655383, 0, 65538, 655390, 0, 65536, 655391, 0, 65538, 720918, 0, 65536, 720919, 0, 65538, 720926, 0, 65536, 720927, 0, 65538, 786454, 0, 65536, 786455, 0, 65538, 786458, 1, 0, 786459, 1, 0, 786462, 0, 65536, 786463, 0, 65538, 851990, 0, 65536, 851991, 0, 65538, 851998, 0, 65536, 851999, 0, 65538, 917526, 0, 65536, 917527, 0, 65538, 917534, 0, 65536, 917535, 0, 65538, 983062, 0, 65536, 983063, 0, 65538, 983070, 0, 65536, 983071, 0, 65538, 1048598, 0, 65536, 1048599, 0, 65538, 1048602, 1, 0, 1048603, 1, 0, 1048606, 0, 65536, 1048607, 0, 65538, 1114134, 0, 65536, 1114135, 0, 65538, 1114142, 0, 65536, 1114143, 0, 65537, 1114144, 0, 1, 1114145, 0, 1, 1114146, 0, 1, 1114147, 0, 1, 1114148, 0, 1, 1114149, 0, 1, 1114150, 0, 1, 1114151, 0, 1, 1114152, 0, 1, 1114153, 0, 1, 1114154, 0, 1, 1114155, 0, 2, 1179670, 0, 65536, 1179671, 0, 65538, 1179678, 0, 131072, 1179679, 0, 131073, 1179680, 0, 131073, 1179681, 0, 131073, 1179682, 0, 131073, 1179683, 0, 131073, 1179684, 0, 131073, 1179685, 0, 131073, 1179686, 0, 131073, 1179687, 0, 131073, 1179688, 0, 131073, 1179689, 0, 131073, 1179690, 0, 65537, 1179691, 0, 65538, 1245206, 0, 65536, 1245207, 0, 65538, 1245226, 0, 65536, 1245227, 0, 65538, 1310742, 0, 65536, 1310743, 0, 65538, 1310762, 0, 65536, 1310763, 0, 65538, 1376278, 0, 65536, 1376279, 0, 65537, 1376280, 0, 1, 1376281, 0, 1, 1376282, 0, 1, 1376283, 0, 1, 1376284, 0, 1, 1376285, 0, 1, 1376286, 0, 1, 1376287, 0, 1, 1376288, 0, 1, 1376289, 0, 1, 1376290, 0, 1, 1376291, 0, 1, 1376292, 0, 1, 1376293, 0, 1, 1376294, 0, 1, 1376295, 0, 1, 1376296, 0, 1, 1376297, 0, 1, 1376298, 0, 65537, 1376299, 0, 65538, 1441814, 0, 131072, 1441815, 0, 131073, 1441816, 0, 131073, 1441817, 0, 131073, 1441818, 0, 131073, 1441819, 0, 131073, 1441820, 0, 131073, 1441821, 0, 131073, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131073, 1441825, 0, 131073, 1441826, 0, 131073, 1441827, 0, 131073, 1441828, 0, 131073, 1441829, 0, 131073, 1441830, 0, 131073, 1441831, 0, 131073, 1441832, 0, 131073, 1441833, 0, 131073, 1441834, 0, 131073, 1441835, 0, 131074 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerKeys" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="PlayerPowers" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_top = 0.18729
margin_bottom = 0.187286

[node name="WorldEnvironment" parent="." instance=ExtResource( 3 )]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 4 )]

[node name="Doors" type="YSort" parent="YSort"]

[node name="YellowDoor" parent="YSort/Doors" instance=ExtResource( 9 )]
position = Vector2( 31.5822, 73.1067 )
level = 3

[node name="SpawnPoint" parent="YSort/Doors/YellowDoor" index="4"]
position = Vector2( 17.3725, 2.6727 )

[node name="BlueDoor" parent="YSort/Doors" instance=ExtResource( 10 )]
position = Vector2( 655.659, 328.836 )
level = 11

[node name="SpawnPoint" parent="YSort/Doors/BlueDoor" index="4"]
position = Vector2( -18.3542, 0.374573 )

[node name="Keys" type="YSort" parent="YSort"]

[node name="BlueKey" parent="YSort/Keys" instance=ExtResource( 11 )]
position = Vector2( 592, 320 )

[node name="Laser" type="YSort" parent="YSort"]

[node name="LaserSight2" parent="YSort/Laser" instance=ExtResource( 8 )]
position = Vector2( 25.0052, 135.619 )
rotation = -1.5708
stop_working_time = 0.001
work_time = 4.0

[node name="LaserSight3" parent="YSort/Laser" instance=ExtResource( 8 )]
position = Vector2( 393.214, 121.385 )
rotation = -1.5708
stop_working_time = 2.0
work_time = 1.0

[node name="LaserSight4" parent="YSort/Laser" instance=ExtResource( 8 )]
position = Vector2( 393.214, 188.809 )
rotation = -1.5708
stop_working_time = 3.0
work_time = 2.0

[node name="LaserSight5" parent="YSort/Laser" instance=ExtResource( 8 )]
position = Vector2( 393.214, 250.24 )
rotation = -1.5708
stop_working_time = 4.0
work_time = 4.0

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 704, 368 )
[connection signal="player_passed" from="YSort/Doors/YellowDoor" to="." method="_on_YellowDoor_player_passed"]
[connection signal="player_passed" from="YSort/Doors/BlueDoor" to="." method="_on_BlueDoor_player_passed"]
[connection signal="is_player" from="YSort/Laser/LaserSight2" to="." method="_on_LaserSight_is_player"]
[connection signal="is_player" from="YSort/Laser/LaserSight3" to="." method="_on_LaserSight_is_player"]
[connection signal="is_player" from="YSort/Laser/LaserSight4" to="." method="_on_LaserSight_is_player"]
[connection signal="is_player" from="YSort/Laser/LaserSight5" to="." method="_on_LaserSight_is_player"]

[editable path="YSort/Doors/YellowDoor"]

[editable path="YSort/Doors/BlueDoor"]
